# Multidecoder

./:  MANIFEST.in  .git-blame-ignore-revs  .gitignore  LICENSE  MANIFEST.in  README.md  ioc.py  network.py  pyproject.toml  setup.cfg  setup.py  string_helper.py  tox.ini
multidecoder/: __init__.py  __main__.py  analyze_data.py  base64.py  domains.py  hit.py  ioc.py  json_conversion.py  keyword.py  multidecoder.py  network.py  node.py  pe_file.py  query.py  registry.py  shell.py  string_helper.py
multidecoder/analyzers/: base64.py  chr.py  concat.py  encoding.py  file_name.py  filename.py  hex.py  javascript.py  network.py  path.py  pe_file.py  replace.py  shell.py  vba.py  xml.py
multidecoder/detectors/: network.py
multidecoder/keywords/: archive  cryptography  debugger.device.name  environment.windows  event  key  network.protocol  network.string  os_name  powershell  privilege  ransomware.string  security_identifier  string  user_agent  vba  vba.name  windows.registry
multidecoder/keywords/api/: api.atl  api.atl80  api.atl90  api.cabinet  api.cmdial32  api.comctl32  api.credui  api.cryptdll  api.cscapi  api.dnsapi  api.dsound  api.esent  api.fveapi  api.gdi32  api.icmp  api.kernelbase  api.lsasrv  api.mfc42  api.mpr  api.mprapi  api.msasn1  api.msutb  api.msvcrt  api.mswsock  api.ntdll  api.ntdsapi  api.ntoskrnl  api.odbccp32  api.oleaut32  api.oledlg  api.onex  api.pdh  api.psapi  api.query  api.riched20  api.rpcrt4  api.se  api.sensapi  api.shimgvw  api.shlwapi  (+13 more)
pipelines/: azure-tests.yaml  publish.yaml
src/multidecoder/: __main__.py  domains.py  hit.py  json_conversion.py  keyword.py  keywords_to_review.txt  multidecoder.py  node.py  query.py  registry.py  string_helper.py  xor_helper.py  xortool.py
src/multidecoder/analyzers/: base64.py  concat.py  filename.py  network.py  path.py  pe_file.py  replace.py  shell.py  vba.py  xml.py
src/multidecoder/decoders/: base64.py  chr.py  codec.py  concat.py  filename.py  hex.py  javascript.py  network.py  path.py  pe_file.py  powershell.py  replace.py  reverse.py  shell.py  vba.py  xml.py
src/multidecoder/keywords/: av.name  cryptography  enable_content  event  guid  network.http_header  network.string  oid  powershell.cmdlet  privilege  sandbox.id  windows.registry
src/multidecoder/keywords/api/: api.advapi32  api.apphelp  api.au3zip  api.avicap32  api.clbcatq  api.cryptbase  api.dbghelp  api.devmgr  api.drprov  api.dsuiext  api.fwpuclnt  api.gina  api.imagehlp  api.iphlpapi  api.kernel32  api.libeay32  api.mapi32  api.msacm32  api.mscoree  api.msi  api.msimg32  api.mspdb80  api.mssign32  api.msvbvm60  api.msvfw32  api.mydocs  api.nddeapi  api.netapi32  api.netplwiz  api.ntshrui  api.odbc32  api.odbctrac  api.ole32  api.packet  api.powrprof  api.pstorec  api.rasapi32  api.rastapi  api.scarddlg  api.scecli  (+13 more)
src/multidecoder/search/: hit.py  network.py
stubs/: pefile.pyi
test/: test_analyze_data.py  test_b64.py  test_base64.py  test_concat.py  test_file_name.py  test_ioc.py  test_multidecoder.py  test_network.py  test_pe_file.py
tests/: test_keyword.py  test_multidecoder.py  test_node.py  test_xor_helper.py
tests/test_analyzers/: test_base64.py  test_chr.py  test_concat.py  test_encoding.py  test_filename.py  test_hex.py  test_javascript.py  test_network.py  test_path.py  test_pe_file.py  test_replace.py  test_shell.py  test_vba.py  test_xml.py
tests/test_decoders/: test_base64.py  test_chr.py  test_codec.py  test_concat.py  test_encoding.py  test_filename.py  test_hex.py  test_javascript.py  test_network.py  test_path.py  test_pe_file.py  test_powershell.py  test_reverse.py  test_shell.py  test_vba.py  test_xml.py
