[build-system]
requires = [
    "setuptools >= 42",
    "wheel",
    "setuptools_scm >= 6.2"
]
build-backend = "setuptools.build_meta"

# setuptools_scm
[tool.setuptools_scm]
write_to = "multidecoder/_version.py"
fallback_version = "0.0.0"

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
profile = "black"