[build-system]
requires = ["setuptools >= 42", "wheel", "setuptools_scm >= 6.2"]
build-backend = "setuptools.build_meta"

# setuptools_scm
[tool.setuptools_scm]
write_to = "src/multidecoder/_version.py"
fallback_version = "0.0.0"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
line-length = 120
target-version = "py39"
lint.select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "FBT",
    "B",
    "A",
    "C4",
    "FA",
    "ISC",
    "PIE",
    "PYI",
    "PT",
    "RET",
    "SIM",
    "TCH",
    "RUF",
]
lint.fixable = ["I"]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
