[metadata]
name = multidecoder
author = CCCS Assemblyline development team
author_email = assemblyline@cyber.gc.ca
description = A context preserving IOC extraction library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = malware, analysis, gc, canada, cse-cst, cse, cst, cyber, cccs
license = MIT
url = https://github.com/CybercentreCanada/Multidecoder
project_urls =
    Bug Tracker = https://github.com/CybercentreCanada/Multidecoder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
    multidecoder
    multidecoder.analyzers
python_requires = >=3.7
install_requires = 
    hyperlink
    pefile
    regex
    simplejson
zip_safe = False
include_package_data = True

[options.entry_points]
console_scripts =
    multidecoder = multidecoder.__main__:main
