[metadata]
name = multidecoder
author = CCCS Assemblyline development team
author_email = assemblyline@cyber.gc.ca
description = A context preserving IOC extraction library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = malware, analysis, gc, canada, cse-cst, cse, cst, cyber, cccs
license = MIT
url = https://github.com/CybercentreCanada/Multidecoder
project_urls =
    Bug Tracker = https://github.com/CybercentreCanada/Multidecoder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.8
install_requires = 
    pefile
    regex
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    multidecoder = multidecoder.__main__:main
